--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ build/
 /include/sprite/
 /include/map
 /tools/permuter_settings.toml
+pm64_save_file.bin
+pm64config.txt
 
 # Assets
 # ** DO NOT UNIGNORE THESE FILES!! SEE THE FOLLOWING LINK IF YOU'RE MODDING ASSETS:**
